#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
rust-version = { workspace = true }
name = "zenohi"
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["zenoh/default"]
shared-memory = ["zenoh/shared-memory"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
pyo3 = "0.24.2"
tokio = { version = "1.44.2", features = ["full"] }
colored = { version ="3.0.0"}
env_logger = "0.11.8"
zenoh = { workspace = true, default-features = false, features = [
  "unstable",
  "internal",
  "plugins",
  "runtime_plugins",
  "internal_config",
] }
zenoh-config = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["default"] }

[build-dependencies]
rustc_version = { workspace = true }

[package.metadata.deb]
name = "zenohi"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2024 ZettaScale Technology"
section = "net"
license-file = ["../LICENSE", "0"]
depends = "$auto"
maintainer-scripts = ".deb"
assets = [
  # binary
  ["target/release/zenohi", "/usr/bin/", "755"]
]
